--- a/Main/Jenkinsfile
+++ b/Main/Jenkinsfile
@@ -4,9 +4,9 @@ pipeline {
         stage('Package') { 
             steps {     
                 withCredentials([string(credentialsId: 'DockerHub', variable: 'TOKEN')]) { 
-                    sh "docker login -u '<username>' -p '$TOKEN' docker.io" 
-                    sh "docker build -t jenkins_k8s:latest --tag <username>/jenkins_k8s:latest ." 
-                    sh "docker push <username>/jenkins_k8s:latest" 
+                    sh "docker login -u 'yungyunc' -p '$TOKEN' docker.io" 
+                    sh "docker build -t jenkins_k8s:latest --tag yungyunc/jenkins_k8s:latest ." 
+                    sh "docker push yungyunc/jenkins_k8s:latest" 
                 } 
             } 
         }
